Revision history for CLI-Ecosystem

{{$NEXT}}

0.0.6  2022-11-18T19:55:15+01:00
    - Bump dependency on Ecosystem for fixes

0.0.5  2022-09-28T10:11:57+02:00
    - Fix version pinning snafu

0.0.4  2022-09-28T10:06:58+02:00
    - Bump dependency on Ecosystem for fixes

0.0.3  2022-09-27T16:35:17+02:00
    - Bump dependency on Ecosystem, to get it installable again
    - Bump dependency on CLI::Version, for fixes
    - Bump dependency on shorten-sub-commands, for fixes

0.0.2  2022-08-03T16:53:53+02:00
    - Bump dependency on CLI::Version

0.0.1  2022-06-26T13:20:45+02:00
    - Initial version, split off of the Ecosystem distribution