@@ -6,9 +6,9 @@
   "build-depends": [
   ],
   "depends": [
-    "Ecosystem:ver<0.0.19>:auth<zef:lizmat>",
-    "shorten-sub-commands:ver<0.0.6>:auth<zef:lizmat>",
-    "CLI::Version:ver<0.0.8>:auth<zef:lizmat>"
+    "Ecosystem:ver<0.0.29+>:auth<zef:lizmat>",
+    "shorten-sub-commands:ver<0.0.7+>:auth<zef:lizmat>",
+    "CLI::Version:ver<0.0.9+>:auth<zef:lizmat>"
   ],
   "description": "Raku® Programming Language Ecosystem Inspector",
   "license": "Artistic-2.0",
