@@ -1,8 +1,8 @@
 name = CLI-Ecosystem
 
 [ReadmeFromPod]
-enabled = false
-filename = lib/CLI/Ecosystem.rakumod
+; enabled = false
+filename = doc/CLI-Ecosystem.rakudoc
 
 [UploadToZef]
 
@@ -10,4 +10,6 @@ filename = lib/CLI/Ecosystem.rakumod
 ; match = ^ 'xt/'
 
 [Badges]
-provider = github-actions/test.yml
+provider = github-actions/linux.yml
+provider = github-actions/macos.yml
+provider = github-actions/windows.yml
